add auth documentation
